--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
         <div class="item-8">8</div>
         <div class="item-9">9</div>
     </div>
+    <h2>Ejemplo 4</h2>
+    <div class="grid-container example-4">
+        <div class="item-1">1</div>
+        <div class="item-2">2</div>
+        <div class="item-3">3</div>
+        <div class="item-4">4</div>
+        <div class="item-5">5</div>
+        <div class="item-6">6</div>
+        <div class="item-7">7</div>
+        <div class="item-8">8</div>
+        <div class="item-9">9</div>
+    </div>
 </body>
 
 </html>
