--- a/index.html
+++ b/index.html
@@ -12,55 +12,55 @@
 <body>
     <h2>Ejemplo 1</h2>
     <div class="grid-container example-1">
-        <div class="item-1">1</div>
-        <div class="item-2">2</div>
-        <div class="item-3">3</div>
-        <div class="item-4">4</div>
-        <div class="item-5">5</div>
-        <div class="item-6">6</div>
-        <div class="item-7">7</div>
-        <div class="item-8">8</div>
-        <div class="item-9">9</div>
+        <div class="item-1 text-align">1</div>
+        <div class="item-2 text-align">2</div>
+        <div class="item-3 text-align">3</div>
+        <div class="item-4 text-align">4</div>
+        <div class="item-5 text-align">5</div>
+        <div class="item-6 text-align">6</div>
+        <div class="item-7 text-align">7</div>
+        <div class="item-8 text-align">8</div>
+        <div class="item-9 text-align">9</div>
     </div>
     <h2>Ejemplo 2</h2>
     <div class="grid-container example-2">
-        <div class="item-1">1</div>
-        <div class="item-2">2</div>
-        <div class="item-3">3</div>
-        <div class="item-4">4</div>
-        <div class="item-5">5</div>
-        <div class="item-6">6</div>
-        <div class="item-7">7</div>
-        <div class="item-8">8</div>
-        <div class="item-9">9</div>
+        <div class="item-1 text-align">1</div>
+        <div class="item-2 text-align">2</div>
+        <div class="item-3 text-align">3</div>
+        <div class="item-4 text-align">4</div>
+        <div class="item-5 text-align">5</div>
+        <div class="item-6 text-align">6</div>
+        <div class="item-7 text-align">7</div>
+        <div class="item-8 text-align">8</div>
+        <div class="item-9 text-align">9</div>
     </div>
     <h2>Ejemplo 3</h2>
     <div class="grid-container example-3">
-        <div class="item-1">1</div>
-        <div class="item-2">2</div>
-        <div class="item-3">3</div>
-        <div class="item-4">4</div>
-        <div class="item-5">5</div>
-        <div class="item-6">6</div>
-        <div class="item-7">7</div>
-        <div class="item-8">8</div>
-        <div class="item-9">9</div>
+        <div class="item-1 text-align">1</div>
+        <div class="item-2 text-align">2</div>
+        <div class="item-3 text-align">3</div>
+        <div class="item-4 text-align">4</div>
+        <div class="item-5 text-align">5</div>
+        <div class="item-6 text-align">6</div>
+        <div class="item-7 text-align">7</div>
+        <div class="item-8 text-align">8</div>
+        <div class="item-9 text-align">9</div>
     </div>
     <h2>Ejemplo 4</h2>
     <div class="grid-container example-4">
-        <div class="item-1">1</div>
-        <div class="item-2">2</div>
-        <div class="item-3">3</div>
-        <div class="item-4">4</div>
-        <div class="item-5">5</div>
-        <div class="item-6">
-            <div>6</div>
-            <div>6</div>
-            <div>6</div>
+        <div class="item-1 text-align">1</div>
+        <div class="item-2 text-align">2</div>
+        <div class="item-3 text-align">3</div>
+        <div class="item-4 text-align">4</div>
+        <div class="item-5 text-align">5</div>
+        <div class="item-6 grid-container">
+            <div class="text-align">6</div>
+            <div class="text-align">6</div>
+            <div class="text-align">6</div>
         </div>
-        <div class="item-7">7</div>
-        <div class="item-8">8</div>
-        <div class="item-9">9</div>
+        <div class="item-7 text-align">7</div>
+        <div class="item-8 text-align">8</div>
+        <div class="item-9 text-align">9</div>
     </div>
 </body>
 
