--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
         <div class="item-3 text-align">3</div>
         <div class="item-4 text-align">4</div>
         <div class="item-5 text-align">5</div>
+        <div class="item-6 text-align">6</div>
+        <div class="item-7 text-align">7</div>
+        <div class="item-8 text-align">8</div>
+        <div class="item-9 text-align">9</div>
+    </div>
+    <h2>Ejemplo 5</h2>
+    <div class="grid-container example-5">
+        <div class="item-1 text-align">1</div>
+        <div class="item-2 text-align">2</div>
+        <div class="item-3 text-align">3</div>
+        <div class="item-4 text-align">4</div>
+        <div class="item-5 text-align">5</div>
         <div class="item-6 grid-container">
             <div class="text-align">6</div>
             <div class="text-align">6</div>
